Added a line in milad.html to create conflict with master , later

--- a/milad.html
+++ b/milad.html
@@ -6,3 +6,4 @@ Changed something in milad.html
 somethig added to create merge conflict with master
 
 #to create a conflict 
+Adde this line in feature/conflicter to create a conflict
