Added a line in master to create conflict

--- a/milad.html
+++ b/milad.html
@@ -6,3 +6,4 @@ Changed something in milad.html
 somethig added to create merge conflict with master
 
 #to create a conflict 
+Another line in master 
